Cambiada forma de obtener metricas

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de3333e5",
    "metadata": {
     "scrolled": true
@@ -13,185 +13,31 @@
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 50763\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 48281\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en 127.0.0.1 55173\n",
-      "INFO:root:(('127.0.0.1', 50763)) Conexión aceptada con ('127.0.0.1', 55173)\n",
-      "INFO:root:(('127.0.0.1', 50763)) Broadcasting start learning...\n",
-      "INFO:root:(('127.0.0.1', 50763)) Sending Initial Model Weights\n",
-      "INFO:root:(('127.0.0.1', 55173)) Broadcasting Number of Samples...\n",
-      "INFO:root:(('127.0.0.1', 55173)) Initialicing Model Weights\n",
-      "INFO:root:(('127.0.0.1', 50763)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(('127.0.0.1', 50763)) Broadcasting Number of Samples...\n",
-      "INFO:root:(('127.0.0.1', 50763)) Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name   | Type     | Params\n",
-      "------------------------------------\n",
-      "0 | metric | Accuracy | 0     \n",
-      "1 | l1     | Linear   | 100 K \n",
-      "2 | l2     | Linear   | 33.0 K\n",
-      "3 | l3     | Linear   | 2.6 K \n",
-      "------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:(('127.0.0.1', 55173)) Model initialized\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:(('127.0.0.1', 55173)) Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name   | Type     | Params\n",
-      "------------------------------------\n",
-      "0 | metric | Accuracy | 0     \n",
-      "1 | l1     | Linear   | 100 K \n",
-      "2 | l2     | Linear   | 33.0 K\n",
-      "3 | l3     | Linear   | 2.6 K \n",
-      "------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "468199bc00bb4335926aba26bffbd78a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "864fc9eaecb94846825b1fc6524ad4f2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pedro/.local/share/virtualenvs/federated_learning_p2p-ODhT9q3L/lib/python3.9/site-packages/torchmetrics/utilities/prints.py:36: UserWarning: The ``compute`` method of metric Accuracy was called before the ``update`` method which may lead to errors, as metric states have not yet been updated.\n",
-      "  warnings.warn(*args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:(127.0.0.1:55173) Model added (1/2) from ('127.0.0.1', 55173)\n",
-      "INFO:root:(('127.0.0.1', 55173)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(127.0.0.1:50763) Model added (1/2) from ('127.0.0.1', 55173)\n",
-      "INFO:root:(127.0.0.1:50763) Model added (2/2) from ('127.0.0.1', 50763)\n",
-      "INFO:root:(127.0.0.1:50763) Agregating models.\n",
-      "INFO:root:(('127.0.0.1', 50763)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
-      "INFO:root:(('127.0.0.1', 50763)) Waiting other nodes.\n",
-      "INFO:root:(127.0.0.1:55173) Model added (2/2) from ('127.0.0.1', 50763)\n",
-      "INFO:root:(127.0.0.1:55173) Agregating models.\n",
-      "INFO:root:(('127.0.0.1', 55173)) Waiting other nodes.\n",
-      "INFO:root:(('127.0.0.1', 50763)) Evaluating...\n",
-      "INFO:root:(('127.0.0.1', 55173)) Evaluating...\n"
+      "INFO:root:Nodo a la escucha en 127.0.0.1 53389\n",
+      "INFO:root:(('127.0.0.1', 48281)) Conexión aceptada con ('127.0.0.1', 53389)\n",
+      "INFO:root:(('127.0.0.1', 48281)) Broadcasting start learning...\n",
+      "INFO:root:(('127.0.0.1', 48281)) Sending Initial Model Weights\n",
+      "INFO:root:(('127.0.0.1', 53389)) Broadcasting Number of Samples...\n",
+      "INFO:root:(('127.0.0.1', 53389)) Initialicing Model Weights\n",
+      "INFO:root:(('127.0.0.1', 48281)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 48281)) Broadcasting Number of Samples...\n",
+      "INFO:root:(('127.0.0.1', 53389)) Model initialized\n",
+      "INFO:root:(('127.0.0.1', 48281)) Training...\n",
+      "INFO:root:(127.0.0.1:48281) Model added (1/2) from ('127.0.0.1', 48281)\n",
+      "INFO:root:(('127.0.0.1', 48281)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(127.0.0.1:53389) Model added (1/2) from ('127.0.0.1', 48281)\n",
+      "INFO:root:(('127.0.0.1', 53389)) Training...\n",
+      "INFO:root:(127.0.0.1:53389) Model added (2/2) from ('127.0.0.1', 53389)\n",
+      "INFO:root:(127.0.0.1:53389) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 53389)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 53389)) Waiting other nodes.\n",
+      "INFO:root:(127.0.0.1:48281) Model added (2/2) from ('127.0.0.1', 53389)\n",
+      "INFO:root:(127.0.0.1:48281) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 48281)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 53389)) Evaluating...\n",
+      "INFO:root:(('127.0.0.1', 48281)) Evaluating...\n"
      ]
     },
     {
@@ -211,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1267d5cb0b524d1d956daea7643ea58d",
+       "model_id": "56be8ccfd77c4249bc2468a2de48d272",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aae6927f9cb742c8bed582941404ea35",
+       "model_id": "8dd3ce6d2e354e30bd276eace3f53c05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,114 +89,74 @@
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_loss           0.1545318067073822\n",
-      "       test_metric          0.9243834018707275\n",
+      "        test_loss            2.301456928253174\n",
+      "       test_metric          0.2083991914987564\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "(0.1545318067073822, 0.9243834018707275)\n",
-      "INFO:root:(('127.0.0.1', 50763)) Broadcasting metrics to 1 clients.\n",
-      "SIN HACERR!!INFO:root:(('127.0.0.1', 50763)) Round 1 of 2 finished.\n",
-      "\n",
-      "INFO:root:(('127.0.0.1', 50763)) Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name   | Type     | Params\n",
-      "------------------------------------\n",
-      "0 | metric | Accuracy | 0     \n",
-      "1 | l1     | Linear   | 100 K \n",
-      "2 | l2     | Linear   | 33.0 K\n",
-      "3 | l3     | Linear   | 2.6 K \n",
-      "------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c383881530d4fa19b2513ea7a77d796",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "       Test metric             DataLoader 0\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_loss           0.1545318067073822\n",
-      "       test_metric          0.9195952415466309\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "(0.1545318067073822, 0.9195952415466309)\n",
-      "INFO:root:(('127.0.0.1', 55173)) Broadcasting metrics to 1 clients.\n",
-      "INFO:root:(('127.0.0.1', 55173)) Round 1 of 2 finished.\n",
+      "(2.301456928253174, 0.2083991914987564)\n",
+      "INFO:root:(('127.0.0.1', 53389)) Broadcasting metrics to 1 clients.\n",
+      "INFO:root:(('127.0.0.1', 53389)) Round 1 of 2 finished.\n",
       "SIN HACERR!!\n",
-      "INFO:root:(('127.0.0.1', 55173)) Training...\n"
+      "INFO:root:(('127.0.0.1', 53389)) Training...\n",
+      "INFO:root:(127.0.0.1:53389) Model added (1/2) from ('127.0.0.1', 53389)\n",
+      "INFO:root:(('127.0.0.1', 53389)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(127.0.0.1:48281) Model added (1/2) from ('127.0.0.1', 53389)\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "       Test metric             DataLoader 0\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "        test_loss            2.301456928253174\n",
+      "       test_metric          0.14995156228542328\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "(2.301456928253174, 0.14995156228542328)\n",
+      "INFO:root:(('127.0.0.1', 48281)) Broadcasting metrics to 1 clients.\n",
+      "INFO:root:(('127.0.0.1', 48281)) Round 1 of 2 finished.\n",
+      "SIN HACERR!!\n",
+      "INFO:root:(('127.0.0.1', 48281)) Training...\n",
+      "INFO:root:(127.0.0.1:48281) Model added (2/2) from ('127.0.0.1', 48281)\n",
+      "INFO:root:(127.0.0.1:48281) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 48281)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 48281)) Waiting other nodes.\n",
+      "INFO:root:(127.0.0.1:53389) Model added (2/2) from ('127.0.0.1', 48281)\n",
+      "INFO:root:(127.0.0.1:53389) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 53389)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 48281)) Evaluating...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n",
+      "GPU available: False, used: False\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(('127.0.0.1', 53389)) Evaluating...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "TPU available: False, using: 0 TPU cores\n",
+      "GPU available: False, used: False\n",
       "IPU available: False, using: 0 IPUs\n",
+      "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name   | Type     | Params\n",
-      "------------------------------------\n",
-      "0 | metric | Accuracy | 0     \n",
-      "1 | l1     | Linear   | 100 K \n",
-      "2 | l2     | Linear   | 33.0 K\n",
-      "3 | l3     | Linear   | 2.6 K \n",
-      "------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "2060078f25c34d1fb06af84a465117a2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
+       "Testing: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -359,16 +165,48 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "987608df50324f85bfb5fbe28eaf85cb",
+       "model_id": "6b9fef93b52242fa969aa76858fe05e1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
+       "Testing: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "       Test metric             DataLoader 0\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "        test_loss            2.301456928253174\n",
+      "       test_metric          0.14519190788269043\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "(2.301456928253174, 0.14519190788269043)\n",
+      "INFO:root:(('127.0.0.1', 53389)) Broadcasting metrics to 1 clients.\n",
+      "SIN HACERR!!INFO:root:(('127.0.0.1', 53389)) Round 2 of 2 finished.\n",
+      "\n",
+      "INFO:root:(('127.0.0.1', 53389)) Finish!!.\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "       Test metric             DataLoader 0\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "        test_loss            2.301456928253174\n",
+      "       test_metric          0.13697433471679688\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "(2.301456928253174, 0.13697433471679688)\n",
+      "INFO:root:(('127.0.0.1', 48281)) Broadcasting metrics to 1 clients.\n",
+      "INFO:root:(('127.0.0.1', 48281)) Round 2 of 2 finished.\n",
+      "INFO:root:(('127.0.0.1', 48281)) Finish!!.\n",
+      "SIN HACERR!!\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 48281 y desconectándose de 1 nodos\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 48281)\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 53389)\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 53389 y desconectándose de 0 nodos\n"
+     ]
     }
    ],
    "source": [
