--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -13,26 +13,379 @@
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:34757\n",
+      "INFO:root:Nodo listening at 127.0.0.1:45479\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:53829\n",
-      "INFO:root:('127.0.0.1', 53829) Connected to 127.0.0.1:34757\n",
-      "INFO:root:('127.0.0.1', 34757) Conexión aceptada con 127.0.0.1:53829\n",
-      "DEBUG:root:Too mucho errors. ('127.0.0.1', 34757)\n",
-      "DEBUG:root:Last error: b'NUM_SAMPLES 54000 10000 -6952033739070900083\\n'\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 34757)\n"
+      "INFO:root:Nodo listening at 127.0.0.1:50679\n",
+      "INFO:root:('127.0.0.1', 50679) Connected to 127.0.0.1:45479\n",
+      "INFO:root:('127.0.0.1', 45479) Conexión aceptada con 127.0.0.1:50679\n",
+      "INFO:root:(('127.0.0.1', 45479)) Broadcasting start learning...\n",
+      "INFO:root:(('127.0.0.1', 45479)) Sending Initial Model Weights\n",
+      "INFO:root:(('127.0.0.1', 45479)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 50679)) Broadcasting Number of Samples...\n",
+      "INFO:root:(('127.0.0.1', 50679)) Initialicing Model Weights\n",
+      "INFO:root:(('127.0.0.1', 50679)) Model initialized\n",
+      "INFO:root:(('127.0.0.1', 45479)) Broadcasting Number of Samples...\n",
+      "INFO:root:(('127.0.0.1', 45479)) Sending train set vote.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Waiting other node votes.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Sending train set vote.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Waiting other node votes.\n",
+      "INFO:root:('127.0.0.1', 50679) Train set of 2 nodes. [('127.0.0.1', 45479), ('127.0.0.1', 50679)]\n",
+      "INFO:root:('127.0.0.1', 45479) Train set of 2 nodes. [('127.0.0.1', 45479), ('127.0.0.1', 50679)]\n",
+      "INFO:root:(('127.0.0.1', 50679)) Evaluating...\n",
+      "INFO:root:(('127.0.0.1', 45479)) Evaluating...\n"
      ]
     },
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 62>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     58\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m.1\u001b[39m) \u001b[38;5;66;03m#Esperar por la asincronía\u001b[39;00m\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m nodes\n\u001b[0;32m---> 62\u001b[0m nodes \u001b[38;5;241m=\u001b[39m \u001b[43mtest_convergence\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mtest_convergence\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Check if they are connected\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m nodes:\n\u001b[0;32m---> 26\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(node\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Start Learning\u001b[39;00m\n\u001b[1;32m     29\u001b[0m nodes[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mset_start_learning(rounds\u001b[38;5;241m=\u001b[39mr,epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d4d2fe53ccf446d8891ffe1d173d4e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "320914e455604abcaed09b69fd29d480",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Something went wrong with pytorch lightning. cannot import name 'Popen' from partially initialized module 'multiprocessing.popen_fork' (most likely due to a circular import) (/usr/lib/python3.9/multiprocessing/popen_fork.py)\n",
+      "INFO:root:(('127.0.0.1', 50679)) Training...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29b30db013104cfc804665240a37e7ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(('127.0.0.1', 50679)) Training...\n",
+      "INFO:root:(('127.0.0.1', 45479)) Evaluated. Losss: 2.301456928253174, Metric: 0.11810000240802765. (Check tensorboard for more info)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Training...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f7c616dd9194100b1cf9c9651701a00",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(127.0.0.1:50679) Model added (1/2) from ('127.0.0.1', 50679)\n",
+      "INFO:root:(('127.0.0.1', 50679)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(127.0.0.1:45479) Model added (1/2) from ('127.0.0.1', 50679)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(127.0.0.1:45479) Model added (2/2) from ('127.0.0.1', 45479)\n",
+      "INFO:root:(127.0.0.1:45479) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Waiting other nodes.\n",
+      "INFO:root:(127.0.0.1:50679) Model added (2/2) from ('127.0.0.1', 45479)\n",
+      "INFO:root:(127.0.0.1:50679) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 50679)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Round 1 of 2 finished.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Round 1 of 2 finished.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Sending train set vote.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Sending train set vote.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Waiting other node votes.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Waiting other node votes.\n",
+      "INFO:root:('127.0.0.1', 45479) Train set of 2 nodes. [('127.0.0.1', 50679), ('127.0.0.1', 45479)]\n",
+      "INFO:root:('127.0.0.1', 50679) Train set of 2 nodes. [('127.0.0.1', 50679), ('127.0.0.1', 45479)]\n",
+      "INFO:root:(('127.0.0.1', 45479)) Evaluating...\n",
+      "INFO:root:(('127.0.0.1', 50679)) Evaluating...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6565a90f43104a05acc02207bafda8b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0cc65b999c854186ad47ca136bce73d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(('127.0.0.1', 45479)) Evaluated. Losss: 0.14684411883354187, Metric: 0.9560999870300293. (Check tensorboard for more info)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Training...\n",
+      "INFO:root:(('127.0.0.1', 50679)) Evaluated. Losss: 0.14684411883354187, Metric: 0.9560999870300293. (Check tensorboard for more info)\n",
+      "INFO:root:(('127.0.0.1', 50679)) Training...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed6f3d8f577d4e55b636ae413c098563",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90ceaa59fa1c41648c963b1f5218dd48",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(127.0.0.1:45479) Model added (1/2) from ('127.0.0.1', 45479)\n",
+      "INFO:root:(127.0.0.1:50679) Model added (1/2) from ('127.0.0.1', 50679)\n",
+      "INFO:root:(('127.0.0.1', 50679)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(127.0.0.1:50679) Model added (2/2) from ('127.0.0.1', 45479)\n",
+      "INFO:root:(127.0.0.1:50679) Agregating models.\n",
+      "INFO:root:(127.0.0.1:45479) Model added (2/2) from ('127.0.0.1', 50679)\n",
+      "INFO:root:(127.0.0.1:45479) Agregating models.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Broadcasting model to 1 clients. (size: 548864 bytes)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Round 2 of 2 finished.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Waiting other nodes.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Evaluating...\n",
+      "INFO:root:(('127.0.0.1', 50679)) Round 2 of 2 finished.\n",
+      "INFO:root:(('127.0.0.1', 50679)) Evaluating...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3af51039b51c4114b514219e02753653",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "287022af91a5450f8e35648721f1d0f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:(('127.0.0.1', 50679)) Evaluated. Losss: 0.08113337308168411, Metric: 0.9749000072479248. (Check tensorboard for more info)\n",
+      "INFO:root:(('127.0.0.1', 50679)) Finish!!.\n",
+      "INFO:root:(('127.0.0.1', 45479)) Evaluated. Losss: 0.08113337308168411, Metric: 0.9749000072479248. (Check tensorboard for more info)\n",
+      "INFO:root:(('127.0.0.1', 45479)) Finish!!.\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 45479 y desconectándose de 1 nodos\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 45479)\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 50679)\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 50679 y desconectándose de 0 nodos\n"
      ]
     }
    ],
@@ -916,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eebb37b6",
+   "id": "db3a7ae1",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5f8e4833",
+   "id": "67cb3aeb",
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "865e9e23",
+   "id": "118d3626",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c77f4fc0",
+   "id": "b52efadd",
    "metadata": {},
    "outputs": [
     {
@@ -1002,8 +1355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ac2d8136",
+   "execution_count": 3,
+   "id": "a5012ebc",
    "metadata": {},
    "outputs": [
     {
@@ -1012,19 +1365,62 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"-1\".isdigit()"
+    "\"-1\".isdecimal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1f9007a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [(1,1)]\n",
+    "b = {1:1}\n",
+    "\n",
+    "a = a + list(b)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "06bcae31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "None in []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e528282",
+   "id": "eda5f0be",
    "metadata": {},
    "outputs": [],
    "source": []
