Error fixed at observer pattern and base node

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c65ca7e",
+   "id": "d1ecc172",
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "54a59502",
+   "id": "f8ca5721",
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1649,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02bea768",
+   "id": "f870ad78",
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f725facd",
+   "id": "66f352ce",
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7bf138b8",
+   "id": "aaf690f5",
    "metadata": {},
    "outputs": [
     {
@@ -1729,8 +1729,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "185131f4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Nodo listening at 127.0.0.1:50711\n",
+      "INFO:root:Nodo listening at 127.0.0.1:46033\n",
+      "INFO:root:('127.0.0.1', 50711) Connected to 127.0.0.1:46033\n",
+      "INFO:root:('127.0.0.1', 46033) Conexión aceptada con 127.0.0.1:50711\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 46033)\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 50711)\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 46033 y desconectándose de 0 nodos\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 50711 y desconectándose de 0 nodos\n"
+     ]
+    }
+   ],
+   "source": [
+    "from p2pfl.base_node import BaseNode\n",
+    "import time\n",
+    "\n",
+    "def test_node_paring():\n",
+    "    n1 = BaseNode()\n",
+    "    n2 = BaseNode()\n",
+    "    n1.start()\n",
+    "    n2.start()\n",
+    "    # Conexión\n",
+    "    n1.connect_to(n2.host,n2.port)\n",
+    "    time.sleep(0.1) #Esperar por la asincronía\n",
+    "    assert len(n1.neightboors) == len(n2.neightboors)==1\n",
+    "\n",
+    "    # Desconexión\n",
+    "    n2.neightboors[0].stop()\n",
+    "    time.sleep(0.1) #Esperar por la asincronía\n",
+    "    assert len(n1.neightboors) == len(n2.neightboors)== 0\n",
+    "    \n",
+    "    n1.stop()\n",
+    "    n2.stop()\n",
+    "\n",
+    "test_node_paring()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c4fa98e4",
+   "id": "0ff84e93",
    "metadata": {},
    "outputs": [],
    "source": []
