Cambiar el padding

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -13,31 +13,73 @@
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:57181\n",
+      "INFO:root:Nodo listening at 127.0.0.1:35963\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:41293\n",
+      "INFO:root:Nodo listening at 127.0.0.1:54353\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:34117\n",
+      "INFO:root:Nodo listening at 127.0.0.1:49183\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:33179\n",
-      "INFO:root:('127.0.0.1', 57181) Conexión aceptada con 127.0.0.1:41293\n",
-      "INFO:root:('127.0.0.1', 41293) Connected to 127.0.0.1:57181\n",
-      "DEBUG:root:('127.0.0.1', 41293) (NodeConnection Send) Exception: 'bytes' object has no attribute 'n'\n",
-      "DEBUG:root:('127.0.0.1', 57181) (NodeConnection Send) Exception: 'bytes' object has no attribute 'n'\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 41293)\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 57181)\n",
-      "INFO:root:('127.0.0.1', 41293) Conexión aceptada con 127.0.0.1:34117\n",
-      "INFO:root:('127.0.0.1', 34117) Connected to 127.0.0.1:41293\n",
-      "DEBUG:root:('127.0.0.1', 34117) (NodeConnection Send) Exception: 'bytes' object has no attribute 'n'\n",
-      "DEBUG:root:('127.0.0.1', 41293) (NodeConnection Send) Exception: 'bytes' object has no attribute 'n'\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 34117)\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 41293)\n",
-      "INFO:root:('127.0.0.1', 34117) Conexión aceptada con 127.0.0.1:33179\n",
-      "INFO:root:('127.0.0.1', 33179) Connected to 127.0.0.1:34117\n",
-      "DEBUG:root:('127.0.0.1', 33179) (NodeConnection Send) Exception: 'bytes' object has no attribute 'n'\n",
-      "DEBUG:root:('127.0.0.1', 34117) (NodeConnection Send) Exception: 'bytes' object has no attribute 'n'\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 33179)\n",
-      "DEBUG:root:Closed connection: ('127.0.0.1', 34117)\n"
+      "INFO:root:Nodo listening at 127.0.0.1:54253\n",
+      "INFO:root:('127.0.0.1', 54353) Connected to 127.0.0.1:35963\n",
+      "INFO:root:('127.0.0.1', 35963) Conexión aceptada con 127.0.0.1:54353\n",
+      "DEBUG:root:('127.0.0.1', 35963) (NodeConnection Send) Exception: can't concat str to bytes\n",
+      "DEBUG:root:('127.0.0.1', 54353) (NodeConnection Send) Exception: can't concat str to bytes\n",
+      "ERROR:root:can't concat str to bytes\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/node_connection.py\", line 276, in send\n",
+      "    data = self.aes_cipher.encrypt( self.aes_cipher.encode_with_padding(data))\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/encrypter.py\", line 108, in encode_with_padding\n",
+      "    msg_pad =  msg + (self.bs - len(msg) % self.bs) * chr(self.bs - len(msg) % self.bs)\n",
+      "TypeError: can't concat str to bytes\n",
+      "ERROR:root:can't concat str to bytes\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/node_connection.py\", line 276, in send\n",
+      "    data = self.aes_cipher.encrypt( self.aes_cipher.encode_with_padding(data))\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/encrypter.py\", line 108, in encode_with_padding\n",
+      "    msg_pad =  msg + (self.bs - len(msg) % self.bs) * chr(self.bs - len(msg) % self.bs)\n",
+      "TypeError: can't concat str to bytes\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 35963)\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 54353)\n",
+      "INFO:root:('127.0.0.1', 49183) Connected to 127.0.0.1:54353\n",
+      "INFO:root:('127.0.0.1', 54353) Conexión aceptada con 127.0.0.1:49183\n",
+      "DEBUG:root:('127.0.0.1', 54353) (NodeConnection Send) Exception: can't concat str to bytes\n",
+      "DEBUG:root:('127.0.0.1', 49183) (NodeConnection Send) Exception: can't concat str to bytes\n",
+      "ERROR:root:can't concat str to bytes\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/node_connection.py\", line 276, in send\n",
+      "    data = self.aes_cipher.encrypt( self.aes_cipher.encode_with_padding(data))\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/encrypter.py\", line 108, in encode_with_padding\n",
+      "    msg_pad =  msg + (self.bs - len(msg) % self.bs) * chr(self.bs - len(msg) % self.bs)\n",
+      "TypeError: can't concat str to bytes\n",
+      "ERROR:root:can't concat str to bytes\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/node_connection.py\", line 276, in send\n",
+      "    data = self.aes_cipher.encrypt( self.aes_cipher.encode_with_padding(data))\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/encrypter.py\", line 108, in encode_with_padding\n",
+      "    msg_pad =  msg + (self.bs - len(msg) % self.bs) * chr(self.bs - len(msg) % self.bs)\n",
+      "TypeError: can't concat str to bytes\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 54353)\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 49183)\n",
+      "INFO:root:('127.0.0.1', 49183) Conexión aceptada con 127.0.0.1:54253\n",
+      "INFO:root:('127.0.0.1', 54253) Connected to 127.0.0.1:49183\n",
+      "DEBUG:root:('127.0.0.1', 54253) (NodeConnection Send) Exception: can't concat str to bytes\n",
+      "DEBUG:root:('127.0.0.1', 49183) (NodeConnection Send) Exception: can't concat str to bytes\n",
+      "ERROR:root:can't concat str to bytes\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/node_connection.py\", line 276, in send\n",
+      "    data = self.aes_cipher.encrypt( self.aes_cipher.encode_with_padding(data))\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/encrypter.py\", line 108, in encode_with_padding\n",
+      "    msg_pad =  msg + (self.bs - len(msg) % self.bs) * chr(self.bs - len(msg) % self.bs)\n",
+      "TypeError: can't concat str to bytes\n",
+      "ERROR:root:can't concat str to bytes\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/node_connection.py\", line 276, in send\n",
+      "    data = self.aes_cipher.encrypt( self.aes_cipher.encode_with_padding(data))\n",
+      "  File \"/home/pedro/Documents/federated_learning_p2p/p2pfl/encrypter.py\", line 108, in encode_with_padding\n",
+      "    msg_pad =  msg + (self.bs - len(msg) % self.bs) * chr(self.bs - len(msg) % self.bs)\n",
+      "TypeError: can't concat str to bytes\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 54253)\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 49183)\n"
      ]
     },
     {
@@ -47,8 +89,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 62>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     58\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m.1\u001b[39m) \u001b[38;5;66;03m#Esperar por la asincronía\u001b[39;00m\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m nodes\n\u001b[0;32m---> 62\u001b[0m nodes \u001b[38;5;241m=\u001b[39m \u001b[43mtest_convergence\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mtest_convergence\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Check if they are connected\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m nodes:\n\u001b[0;32m---> 26\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(node\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Start Learning\u001b[39;00m\n\u001b[1;32m     29\u001b[0m nodes[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mset_start_learning(rounds\u001b[38;5;241m=\u001b[39mr,epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 64>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m.1\u001b[39m) \u001b[38;5;66;03m#Esperar por la asincronía\u001b[39;00m\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m nodes\n\u001b[0;32m---> 64\u001b[0m nodes \u001b[38;5;241m=\u001b[39m \u001b[43mtest_convergence\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mtest_convergence\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# Check if they are connected\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m nodes:\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(node\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# Start Learning\u001b[39;00m\n\u001b[1;32m     31\u001b[0m nodes[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mset_start_learning(rounds\u001b[38;5;241m=\u001b[39mr,epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -68,15 +110,17 @@
     "    nodes = []\n",
     "    \n",
     "    for i in range(n):\n",
-    "        node = Node(MLP(),MnistFederatedDM())\n",
+    "        node = Node(MLP(),MnistFederatedDM(), simulation=False)\n",
     "        node.start()\n",
     "        nodes.append(node)\n",
     "\n",
     "    # Node Connection\n",
     "    for i in range(len(nodes)-1):\n",
     "        nodes[i+1].connect_to(nodes[i].host,nodes[i].port)\n",
-    "        time.sleep(0.1)\n",
+    "        time.sleep(.1)\n",
     "\n",
+    "    time.sleep(3)     \n",
+    "        \n",
     "    # Check if they are connected\n",
     "    for node in nodes:\n",
     "        assert len(node.neightboors) == n-1\n",
@@ -455,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e403a097",
+   "id": "1ac7ae97",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b6221235",
+   "id": "6e66df73",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "df3222fc",
+   "id": "9809322b",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eaeecd78",
+   "id": "e5f8cbd5",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e5f9b4a4",
+   "id": "3b5cdee7",
    "metadata": {},
    "outputs": [
     {
@@ -674,8 +718,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "f3c284b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Crypto.Random import get_random_bytes\n",
+    "len(get_random_bytes(16))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f3be2051",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "271"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Crypto.PublicKey import RSA\n",
+    "len((RSA.generate(1024)).publickey().export_key())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6c60143b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'a']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"   a    a   \".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c30ffb0d",
+   "id": "49731dbd",
    "metadata": {},
    "outputs": [],
    "source": []
