--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1ac7ae97",
+   "id": "1d6ae187",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6e66df73",
+   "id": "158269ed",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9809322b",
+   "id": "1512bfa4",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e5f8cbd5",
+   "id": "9c5be8f6",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3b5cdee7",
+   "id": "5d643ef7",
    "metadata": {},
    "outputs": [
     {
@@ -704,13 +704,15 @@
     "#    RSA Encryption Test    #\n",
     "#############################\n",
     "\n",
-    "def test_aes_encription_decription_model():\n",
-    "    nl = LightningLearner(MLP(), None)\n",
-    "    encoded_parameters = nl.encode_parameters()\n",
-    "\n",
-    "    messages = CommunicationProtocol.build_params_msg(encoded_parameters)\n",
+    "def test_aes_encription_decription1():\n",
+    "    cipher = AESCipher()\n",
+    "    message=\"zzZZZZ!\"\n",
+    "    encoded_mesage = cipher.padding_to_encoded_text(message.encode(\"utf-8\"))\n",
+    "    encrypted_message = cipher.encrypt(encoded_mesage)\n",
+    "    decrypted_message = cipher.decrypt(encrypted_message)\n",
+    "    decoded_message = \" \".join(decrypted_message.decode(\"utf-8\").split(\" \"))\n",
     "    \n",
-    "    return messages\n",
+    "    assert message == decoded_message\n",
     "\n",
     "\n",
     "test_aes_encription_decription_model()"
@@ -719,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3c284b9",
+   "id": "c7cd9a6a",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f3be2051",
+   "id": "9bf32c4e",
    "metadata": {},
    "outputs": [
     {
@@ -763,29 +765,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6c60143b",
+   "execution_count": 6,
+   "id": "7e13a157",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a', 'a']"
+       "['', '', '', 'a', '', '', '', 'a', '', '', '']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"   a    a   \".split()"
+    "\"   a    a   \".split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dc950691",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"  \".encode(\"utf-8\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49731dbd",
+   "id": "4e009028",
    "metadata": {},
    "outputs": [],
    "source": []
